src/objects/Program_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Automatically_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to Checked if created via the nightly script. This script should not delete and rebuild stages with this value unchecked (default), which were added by hand.</description>
        <label>Automatically Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Stages</relationshipLabel>
        <relationshipName>Program_Stage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Cycle__c</fullName>
        <label>Program Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>for sorting related list by cycle/stage descending</description>
        <formula>CASE(Stage_Number__c,
2,Program_Cycle__c+0.045,
3,Program_Cycle__c+0.075,
Program_Cycle__c+(0.001* Stage_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Date__c</fullName>
        <label>Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Id__c</fullName>
        <label>Stage Id</label>
        <picklist>
            <picklistValues>
                <fullName>1.Not Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Withdrawn from Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Withdrawn From Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Referred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30.Enrolled In Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40.Enrolled In Training After 1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50.Completed Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70.Enrolled In Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80.Completed Internship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Number__c</fullName>
        <label>Stage Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Program Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Client_Name__c</columns>
        <columns>NAME</columns>
        <columns>Program_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Program Stage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>